--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
       <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-24 mb-48">用專業的心，做專業的事</h2>
       <div class="row">
         <div class="col-3 col-sm-12 col-md-6">
-          <img src="/images/home-section2-1.png" alt="section2-1" class="mx-auto section-2-img mb-24">
+          <img src="./images/home-section2-1.png" alt="section2-1" class="mx-auto section-2-img mb-24">
           <h3 class="text-center text-secondary fw-bold fs-24 mb-8 ">單一價格</h3>
           <p class="text-center">無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
         </div>
         <div class="col-3 col-sm-12 col-md-6">
-          <img src="/images/home-section2-2.png" alt="section2-2" class="mx-auto section-2-img mb-24">
+          <img src="./images/home-section2-2.png" alt="section2-2" class="mx-auto section-2-img mb-24">
           <h3 class="text-center text-secondary fw-bold fs-24 mb-8">20 分鐘即可取件</h3>
           <p class="text-center">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
         </div>
         <div class="col-3 col-sm-12 col-md-6">
-          <img src="/images/home-section2-3.png" alt="section2-3" class="mx-auto section-2-img mb-24">
+          <img src="./images/home-section2-3.png" alt="section2-3" class="mx-auto section-2-img mb-24">
           <h3 class="text-center text-secondary fw-bold fs-24 mb-8">安心售後服務</h3>
           <p class="text-center">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
         </div>
         <div class="col-3 col-sm-12 col-md-6">
-          <img src="/images/home-section2-4.png" alt="section2-4" class="mx-auto section-2-img mb-24">
+          <img src="./images/home-section2-4.png" alt="section2-4" class="mx-auto section-2-img mb-24">
           <h3 class="text-center text-secondary fw-bold fs-24 mb-8">關於鏡片</h3>
           <p class="text-center">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
         </div>
@@ -68,15 +68,15 @@
       <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-24 mb-48">經典系列鏡框</h2>
       <div class="row">
         <div class="col-4 col-lg-12 mx-auto">
-          <img src="/images/home-section3-1.png" alt="section3-1" class="mx-auto">
+          <img src="./images/home-section3-1.png" alt="section3-1" class="mx-auto">
           <p class="fs-48 text-primary text-center fw-bold">OPTICAL</p>
         </div>
         <div class="col-4 col-lg-12 mx-auto">
-          <img src="/images/home-section3-2.png" alt="section3-2" class="mx-auto">
+          <img src="./images/home-section3-2.png" alt="section3-2" class="mx-auto">
           <p class="fs-48 text-primary text-center fw-bold">SUNGLASSES</p>
         </div>
         <div class="col-4 col-lg-12 mx-auto">
-          <img src="/images/home-section3-3.png" alt="section3-3" class="mx-auto">
+          <img src="./images/home-section3-3.png" alt="section3-3" class="mx-auto">
           <p class="fs-48 text-primary text-center fw-bold">FUNCTIONAL</p>
         </div>
       </div>
@@ -88,13 +88,13 @@
       <h2 class="text-center text-white fw-bold fs-48 fs-sm-24 mb-48">聯名設計鏡框</h2>
       <div class="row">
         <div class="col-6 col-md-12 mx-auto">
-          <img src="/images/home-section4-1.png" alt="section4-1" class="d-block d-sm-none">
-          <img src="/images/home-section4-1-sm.png" alt="section4-1-sm" class="d-none d-sm-block">
+          <img src="./images/home-section4-1.png" alt="section4-1" class="d-block d-sm-none">
+          <img src="./images/home-section4-1-sm.png" alt="section4-1-sm" class="d-none d-sm-block">
           <p class="fs-48 text-primary text-center bg-white fw-bold">DOUBLE A+</p>
         </div>
         <div class="col-6 col-md-12 mx-auto">
-          <img src="/images/home-section4-2.png" alt="section4-1" class="d-block d-sm-none">
-          <img src="/images/home-section4-2-sm.png" alt="section4-2-sm" class="d-none d-sm-block">
+          <img src="./images/home-section4-2.png" alt="section4-1" class="d-block d-sm-none">
+          <img src="./images/home-section4-2-sm.png" alt="section4-2-sm" class="d-none d-sm-block">
           <p class="fs-48 text-primary text-center bg-white fw-bold">YOUTH</p>
         </div>
       </div>
@@ -106,7 +106,7 @@
       <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-24 mb-48">顧客推薦</h2>
       <div class="row">
         <div class="col-3 col-sm-12 col-md-6 d-flex flex-column">
-          <img src="/images/home-section5-1.png" alt="section5-1">
+          <img src="./images/home-section5-1.png" alt="section5-1">
           <div class="p-16 d-flex flex-column h-100">
             <p class="mb-8">Jessy</p>
             <p class="mb-72 flex-grow-1">眼鏡品質優良，下次還會想來這邊購買！</p>
@@ -114,7 +114,7 @@
           </div>
         </div>
         <div class="col-3 col-sm-12 col-md-6 d-flex flex-column">
-          <img src="/images/home-section5-2.png" alt="section5-1">
+          <img src="./images/home-section5-2.png" alt="section5-1">
           <div class="p-16 d-flex flex-column h-100">
             <p class="mb-8">凱倫</p>
             <p class="mb-72 flex-grow-1">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="col-3 col-sm-12 col-md-6 d-flex flex-column">
-          <img src="/images/home-section5-3.png" alt="section5-1">
+          <img src="./images/home-section5-3.png" alt="section5-1">
           <div class="p-16 d-flex flex-column h-100">
             <p class="mb-8">悠悠</p>
             <p class="mb-72 flex-grow-1">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
@@ -130,7 +130,7 @@
           </div>
         </div>
         <div class="col-3 col-sm-12 col-md-6 d-flex flex-column">
-          <img src="/images/home-section5-4.png" alt="section5-1">
+          <img src="./images/home-section5-4.png" alt="section5-1">
           <div class="p-16 d-flex flex-column h-100">
             <p class="mb-8">Kyuan</p>
             <p class="mb-72 flex-grow-1">服務很好，品質沒有任何問題，非常喜歡。</p>
@@ -197,9 +197,9 @@
         </div>
         <div class="col-auto ms-auto order-md-1">
           <div class="d-flex">
-            <a href="#"><img src="/images/ic-social-fb.png" alt="連結圖" class="footer-ic-social me-16 me-md-8"></a>
-            <a href="#"><img src="/images/ic_social_ig.png" alt="連結圖" class="footer-ic-social me-16 me-md-8"></a>
-            <a href="#"><img src="/images/ic_social_line.png" alt="連結圖" class="footer-ic-social"></a>
+            <a href="#"><img src="./images/ic-social-fb.png" alt="連結圖" class="footer-ic-social me-16 me-md-8"></a>
+            <a href="#"><img src="./images/ic_social_ig.png" alt="連結圖" class="footer-ic-social me-16 me-md-8"></a>
+            <a href="#"><img src="./images/ic_social_line.png" alt="連結圖" class="footer-ic-social"></a>
           </div>
         </div>
         <div class="col-12 col-md-8 me-auto">
