--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section class="section-2 bg-pink py-80 py-sm-40">
     <div class="container">
       <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-24 mb-48">用專業的心，做專業的事</h2>
-      <div class="row">
+      <div class="row justify-content-between">
         <div class="col-3 col-sm-12 col-md-6">
           <img src="./images/home-section2-1.png" alt="section2-1" class="mx-auto section-2-img mb-24">
           <h3 class="text-center text-secondary fw-bold fs-24 mb-8 ">單一價格</h3>
@@ -66,16 +66,16 @@
   <section class="section-3 py-80 py-sm-40">
     <div class="container">
       <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-24 mb-48">經典系列鏡框</h2>
-      <div class="row">
-        <div class="col-4 col-lg-12 mx-auto">
+      <div class="row justify-content-between">
+        <div class="col-4 col-lg-12">
           <img src="./images/home-section3-1.png" alt="section3-1" class="mx-auto">
           <p class="fs-48 text-primary text-center fw-bold">OPTICAL</p>
         </div>
-        <div class="col-4 col-lg-12 mx-auto">
+        <div class="col-4 col-lg-12">
           <img src="./images/home-section3-2.png" alt="section3-2" class="mx-auto">
           <p class="fs-48 text-primary text-center fw-bold">SUNGLASSES</p>
         </div>
-        <div class="col-4 col-lg-12 mx-auto">
+        <div class="col-4 col-lg-12">
           <img src="./images/home-section3-3.png" alt="section3-3" class="mx-auto">
           <p class="fs-48 text-primary text-center fw-bold">FUNCTIONAL</p>
         </div>
@@ -104,8 +104,8 @@
   <section class="section-5 py-80 py-sm-40">
     <div class="container">
       <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-24 mb-48">顧客推薦</h2>
-      <div class="row">
-        <div class="col-3 col-sm-12 col-md-6 d-flex flex-column">
+      <div class="row justify-content-between">
+        <div class="col-3 col-sm-12 col-md-6 d-flex flex-column section-5-card">
           <img src="./images/home-section5-1.png" alt="section5-1">
           <div class="p-16 d-flex flex-column h-100">
             <p class="mb-8">Jessy</p>
@@ -113,7 +113,7 @@
             <small class="fs-14 text-gary">2021/06/20</small>
           </div>
         </div>
-        <div class="col-3 col-sm-12 col-md-6 d-flex flex-column">
+        <div class="col-3 col-sm-12 col-md-6 d-flex flex-column section-5-card">
           <img src="./images/home-section5-2.png" alt="section5-1">
           <div class="p-16 d-flex flex-column h-100">
             <p class="mb-8">凱倫</p>
@@ -121,7 +121,7 @@
             <small class="fs-14 text-gary">2021/06/20</small>
           </div>
         </div>
-        <div class="col-3 col-sm-12 col-md-6 d-flex flex-column">
+        <div class="col-3 col-sm-12 col-md-6 d-flex flex-column section-5-card">
           <img src="./images/home-section5-3.png" alt="section5-1">
           <div class="p-16 d-flex flex-column h-100">
             <p class="mb-8">悠悠</p>
@@ -129,7 +129,7 @@
             <small class="fs-14 text-gary">2021/06/20</small>
           </div>
         </div>
-        <div class="col-3 col-sm-12 col-md-6 d-flex flex-column">
+        <div class="col-3 col-sm-12 col-md-6 d-flex flex-column section-5-card">
           <img src="./images/home-section5-4.png" alt="section5-1">
           <div class="p-16 d-flex flex-column h-100">
             <p class="mb-8">Kyuan</p>
