--- a/index.html
+++ b/index.html
@@ -29,33 +29,33 @@
         <div class="col-6 header-wrap text-end">
           <h2 class="text-secondary">Promise-Desert 2020 早春系列</h2>
           <h1 class="text-secondary">看得清，才能看得遠</h1>
-          <button class="bg-primary text-white ">立即購買</button>
+          <button class="bg-primary text-white">立即購買</button>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="section-2 bg-pink py-80 py-sm-40">
+  <section class="section-2 bg-pink py-20 py-sm-10">
     <div class="container">
-      <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-24 mb-48">用專業的心，做專業的事</h2>
+      <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-6 mb-12">用專業的心，做專業的事</h2>
       <div class="row justify-content-between">
         <div class="col-3 col-sm-12 col-md-6">
-          <img src="./images/home-section2-1.png" alt="section2-1" class="mx-auto section-2-img mb-24">
+          <img src="./images/home-section2-1.png" alt="section2-1" class="mx-auto section-2-img mb-6">
           <h3 class="text-center text-secondary fw-bold fs-24 mb-8 ">單一價格</h3>
           <p class="text-center">無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
         </div>
         <div class="col-3 col-sm-12 col-md-6">
-          <img src="./images/home-section2-2.png" alt="section2-2" class="mx-auto section-2-img mb-24">
+          <img src="./images/home-section2-2.png" alt="section2-2" class="mx-auto section-2-img mb-6">
           <h3 class="text-center text-secondary fw-bold fs-24 mb-8">20 分鐘即可取件</h3>
           <p class="text-center">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
         </div>
         <div class="col-3 col-sm-12 col-md-6">
-          <img src="./images/home-section2-3.png" alt="section2-3" class="mx-auto section-2-img mb-24">
+          <img src="./images/home-section2-3.png" alt="section2-3" class="mx-auto section-2-img mb-6">
           <h3 class="text-center text-secondary fw-bold fs-24 mb-8">安心售後服務</h3>
           <p class="text-center">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
         </div>
         <div class="col-3 col-sm-12 col-md-6">
-          <img src="./images/home-section2-4.png" alt="section2-4" class="mx-auto section-2-img mb-24">
+          <img src="./images/home-section2-4.png" alt="section2-4" class="mx-auto section-2-img mb-6">
           <h3 class="text-center text-secondary fw-bold fs-24 mb-8">關於鏡片</h3>
           <p class="text-center">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
         </div>
@@ -63,9 +63,9 @@
     </div>
   </section>
 
-  <section class="section-3 py-80 py-sm-40">
+  <section class="section-3 py-20 py-sm-10">
     <div class="container">
-      <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-24 mb-48">經典系列鏡框</h2>
+      <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-6 mb-12">經典系列鏡框</h2>
       <div class="row justify-content-between">
         <div class="col-4 col-lg-12">
           <img src="./images/home-section3-1.png" alt="section3-1" class="mx-auto">
@@ -83,9 +83,9 @@
     </div>
   </section>
 
-  <section class="section-4 bg-section-4 py-80 py-sm-40">
+  <section class="section-4 bg-section-4 py-20 py-sm-10">
     <div class="container text">
-      <h2 class="text-center text-white fw-bold fs-48 fs-sm-24 mb-48">聯名設計鏡框</h2>
+      <h2 class="text-center text-white fw-bold fs-48 fs-sm-6 mb-12">聯名設計鏡框</h2>
       <div class="row">
         <div class="col-6 col-md-12 mx-auto">
           <img src="./images/home-section4-1.png" alt="section4-1" class="d-block d-sm-none">
@@ -101,39 +101,39 @@
     </div>
   </section>
   
-  <section class="section-5 py-80 py-sm-40">
+  <section class="section-5 py-20 py-sm-10">
     <div class="container">
-      <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-24 mb-48">顧客推薦</h2>
+      <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-6 mb-12">顧客推薦</h2>
       <div class="row justify-content-between">
         <div class="col-3 col-sm-12 col-md-6 d-flex flex-column section-5-card">
           <img src="./images/home-section5-1.png" alt="section5-1">
-          <div class="p-16 d-flex flex-column h-100">
-            <p class="mb-8">Jessy</p>
-            <p class="mb-72 flex-grow-1">眼鏡品質優良，下次還會想來這邊購買！</p>
+          <div class="p-4 d-flex flex-column h-100">
+            <p class="mb-2">Jessy</p>
+            <p class="mb-18 flex-grow-1">眼鏡品質優良，下次還會想來這邊購買！</p>
             <small class="fs-14 text-gary">2021/06/20</small>
           </div>
         </div>
         <div class="col-3 col-sm-12 col-md-6 d-flex flex-column section-5-card">
           <img src="./images/home-section5-2.png" alt="section5-1">
-          <div class="p-16 d-flex flex-column h-100">
-            <p class="mb-8">凱倫</p>
-            <p class="mb-72 flex-grow-1">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
+          <div class="p-4 d-flex flex-column h-100">
+            <p class="mb-2">凱倫</p>
+            <p class="mb-18 flex-grow-1">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
             <small class="fs-14 text-gary">2021/06/20</small>
           </div>
         </div>
         <div class="col-3 col-sm-12 col-md-6 d-flex flex-column section-5-card">
           <img src="./images/home-section5-3.png" alt="section5-1">
-          <div class="p-16 d-flex flex-column h-100">
-            <p class="mb-8">悠悠</p>
-            <p class="mb-72 flex-grow-1">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
+          <div class="p-4 d-flex flex-column h-100">
+            <p class="mb-2">悠悠</p>
+            <p class="mb-18 flex-grow-1">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
             <small class="fs-14 text-gary">2021/06/20</small>
           </div>
         </div>
         <div class="col-3 col-sm-12 col-md-6 d-flex flex-column section-5-card">
           <img src="./images/home-section5-4.png" alt="section5-1">
-          <div class="p-16 d-flex flex-column h-100">
-            <p class="mb-8">Kyuan</p>
-            <p class="mb-72 flex-grow-1">服務很好，品質沒有任何問題，非常喜歡。</p>
+          <div class="p-4 d-flex flex-column h-100">
+            <p class="mb-2">Kyuan</p>
+            <p class="mb-18 flex-grow-1">服務很好，品質沒有任何問題，非常喜歡。</p>
             <small class="fs-14 text-gary">2021/06/20</small>
           </div>
         </div>
@@ -141,41 +141,41 @@
     </div>
   </section>
 
-  <section class="section-6 bg-pink py-80 py-sm-40">
+  <section class="section-6 bg-pink py-20 py-sm-10">
     <div class="container">
-      <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-24 mb-48">聯絡我們</h2>
+      <h2 class="text-center text-secondary fw-bold fs-48 fs-sm-6 mb-12">聯絡我們</h2>
       <div class="col-6 col-md-10 col-sm-12 mx-auto">
-        <p class="fs-20 fs-sm-16 mb-24">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
+        <p class="fs-20 fs-sm-16 mb-2">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
         <form>
-          <div class="mb-16">
-            <label class="d-block mb-8" for="name">
+          <div class="mb-4">
+            <label class="d-block mb-2" for="name">
               姓名
             </label>
-            <input id="name" class="input-style" type="text">
+            <input id="name" class="input-style" type="text" placeholder="陳小明">
           </div>
-          <div class="mb-16">
-            <label class="d-block mb-8" for="phone">
+          <div class="mb-4">
+            <label class="d-block mb-2" for="phone" >
               連絡電話
             </label>
-            <input id="phone" class="input-style" type="tel">
+            <input id="phone" class="input-style" type="tel" placeholder="0912-345-678">
           </div>
-          <div class="mb-16">
-            <label class="d-block mb-8" for="email">
+          <div class="mb-4">
+            <label class="d-block mb-2" for="email">
               電子郵件
             </label>
-            <input id="email" class="input-style" type="email">
+            <input id="email" class="input-style" type="email" placeholder="example@gmail.com">
           </div>
-          <div class="mb-16">
-            <label class="d-block mb-8" for="feedback">
+          <div class="mb-4">
+            <label class="d-block mb-2" for="feedback">
               意見反應
             </label>
-            <textarea id="feedback" class="input-style feedback"></textarea>
+            <textarea id="feedback" class="input-style feedback" placeholder="請輸入您的意見"></textarea>
           </div>
-          <div class="d-flex mb-48 align-items-start">
-            <input class="form-checkbox me-4" type="checkbox" id="form-checkbox" />
+          <div class="d-flex mb-3 align-items-start">
+            <input class="form-checkbox me-1" type="checkbox" id="form-checkbox" />
             <label for="form-checkbox">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
           </div>
-          <a href="#" class="bg-primary index-form-btn d-block text-white py-16 text-center mx-auto"> 
+          <a href="#" class="bg-primary index-form-btn d-block text-white py-4 text-center mx-auto"> 
             確認送出
           </a>
         </form>
@@ -183,42 +183,42 @@
     </div>
   </section>
 
-  <footer class="bg-primary pt-60 pb-32 py-md-24 text-white">
+  <footer class="bg-primary pt-15 pb-8 py-md-6 text-white">
     <div class="container">
-      <div class="row mb-36">
-        <div class="col-6 d-md-none">
+      <div class="row mb-9">
+        <div class="col-9 d-md-none">
           <ul class="d-flex align-items-center h-100">
-            <li class=""><a href="#" class="text-white h-100 me-48">首頁</a></li>
-            <li class=""><a href="#" class="text-white h-100 me-48">系列鏡框</a></li>
-            <li class=""><a href="#" class="text-white h-100 me-48">門市據點</a></li>
-            <li class=""><a href="#" class="text-white h-100 me-48">部落格</a></li>
+            <li class="test"><a href="#" class="text-white h-100 me-12">首頁</a></li>
+            <li class=""><a href="#" class="text-white h-100 me-12">系列鏡框</a></li>
+            <li class=""><a href="#" class="text-white h-100 me-12">門市據點</a></li>
+            <li class=""><a href="#" class="text-white h-100 me-12">部落格</a></li>
             <li class=""><a href="#" class="text-white h-100">常見問題</a></li>
           </ul>
         </div>
         <div class="col-auto ms-auto order-md-1">
           <div class="d-flex">
-            <a href="#"><img src="./images/ic-social-fb.png" alt="連結圖" class="footer-ic-social me-16 me-md-8"></a>
-            <a href="#"><img src="./images/ic_social_ig.png" alt="連結圖" class="footer-ic-social me-16 me-md-8"></a>
+            <a href="#"><img src="./images/ic-social-fb.png" alt="連結圖" class="footer-ic-social me-4 me-md-2"></a>
+            <a href="#"><img src="./images/ic_social_ig.png" alt="連結圖" class="footer-ic-social me-4 me-md-2"></a>
             <a href="#"><img src="./images/ic_social_line.png" alt="連結圖" class="footer-ic-social"></a>
           </div>
         </div>
         <div class="col-12 col-md-8 me-auto">
           <div class="mb-8">
-            <span class="material-symbols-outlined me-22 me-md-10">call</span>
-            <span class="fs-36 fs-md-16">0800-000-000</span>
+            <span class="material-symbols-outlined me-5 me-md-2">call</span>
+            <span class="fs-36 fs-md-16" href="tel: 0800000000">0800-000-000</span>
           </div>
           <div class="">
-            <span class="material-symbols-outlined me-22 me-md-10">mail</span>
-            <span class="fs-36 fs-md-16">glasses@business.com</span>
+            <span class="material-symbols-outlined me-5 me-md-2">mail</span>
+            <span class="fs-36 fs-md-16" href="mailto: glasses@business.com">glasses@business.com</span>
           </div>
         </div>
       </div>
-      <div class="row pt-32 pt-md-20 border-top-white">
-        <div class="col-auto col-md-12 mb-md-8">
+      <div class="row pt-8 pt-md-5 border-top-white">
+        <div class="col-auto col-md-12 mb-md-2">
           Copyright © 2020 Glasses.All rights reserved.
         </div>
-        <div class="col-auto col-md-12 ms-auto me-md-auto mb-md-8">
-          <p class="me-48">隱私權政策</p>   
+        <div class="col-auto col-md-12 ms-auto me-md-auto mb-md-2">
+          <p class="me-12">隱私權政策</p>   
         </div>
         <div class="col-auto col-md-12">
           <p>服務條款</p>
