移除多於程式碼

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <div class="row mb-9">
         <div class="col-9 d-md-none">
           <ul class="d-flex align-items-center h-100">
-            <li class="test"><a href="#" class="text-white h-100 me-12">首頁</a></li>
+            <li class=""><a href="#" class="text-white h-100 me-12">首頁</a></li>
             <li class=""><a href="#" class="text-white h-100 me-12">系列鏡框</a></li>
             <li class=""><a href="#" class="text-white h-100 me-12">門市據點</a></li>
             <li class=""><a href="#" class="text-white h-100 me-12">部落格</a></li>
